@@ -1,4 +1,4 @@
-# $Id: VRMLC.pm,v 1.298 2008/08/11 22:51:53 crc_canada Exp $
+# $Id: VRMLC.pm,v 1.299 2008/08/12 00:23:04 crc_canada Exp $
 #
 # Copyright (C) 1998 Tuomas J. Lukka 1999 John Stewart CRC Canada
 # Portions Copyright (C) 1998 Bernhard Reiter
@@ -8,6 +8,9 @@
 
 #
 # $Log: VRMLC.pm,v $
+# Revision 1.299  2008/08/12 00:23:04  crc_canada
+# Switch mode X3D parsing changes.
+#
 # Revision 1.298  2008/08/11 22:51:53  crc_canada
 # Viewpoint binding problem (threading) and general comment cleanup
 #
@@ -787,6 +790,7 @@ sub gen {
 	"#define X3D_NODE(node) ((struct X3D_Node*)node)\n".
 	"#define X3D_GROUP(node) ((struct X3D_Group*)node)\n".
 	"#define X3D_INLINE(node) ((struct X3D_Inline*)node)\n".
+	"#define X3D_SWITCH(node) ((struct X3D_Switch*)node)\n".
 	"#define X3D_SCRIPT(node) ((struct X3D_Script*)node)\n".
 	"#define X3D_GEOORIGIN(node) ((struct X3D_GeoOrigin*)node)\n".
 	"#define X3D_GEOELEVATIONGRID(node) ((struct X3D_GeoElevationGrid*)node)\n".
