@@ -1,4 +1,6 @@
 For 1.20.6
+	- X3D Switch statement was not parsing correctly.
+
 	- Binding of nodes on parse now done in display thread, instead of parsing
 	  thread, to get around infrequent bug that would give erratic results.
 
